Bug fix on mobile view [CSS]
It seems the backdrop-filter destroys the function of toggle.

And there's unnecessary spacing on mobile view.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* CUSTOM CSS */
 .navbar-backtop-filter {
-	backdrop-filter: blur(10px);
-	background-color: rgba(36,38,42, 0.8) !important;
+	/* backdrop-filter: blur(10px); */
+	/* background-color: rgba(36,38,42, 0.8) !important; */
 }
 
 .content-shadow {
@@ -425,7 +425,8 @@ input[type='checkbox'] {
 
 .offcanvas-collapse {
 	position: fixed;
-	top: 3.25rem; /* adjusts the height between the top of the page and the offcanvas menu */
+	/*top: 3.25rem;  adjusts the height between the top of the page and the offcanvas menu */
+	top: 2.9rem;
 	bottom: 0;
 	left: 100%;
 	width: 100%;
